# discordant

./: .gitmodules  CMakeLists.txt  Justfile  README.md  sdkconfig  sdkconfig.old
asm/: Makefile  airraid.asm  airraid.com  coin.asm  coin.com  explode.asm  explode.com  flyby.asm  flyby.com  hush.asm  hush.com  jump.asm  jump.com  powerup.asm  powerup.com  shoot.asm  shoot.com  test.asm  test.asm.bak  test.com  twotone.asm  twotone.com  wail.asm  wail.com  wobble.asm  wobble.com  yelp.asm  yelp.com  zap.asm  zap.com
components/amy/: CMakeLists.txt
components/amy/patches/: 0001-i2s-task-signature.patch  0002-midi-task-signature.patch  0003-task-priority-off-by-one.patch
components/pforth/: CMakeLists.txt  pf_io_esp32s3.c  pfcustom.c
components/pforth/csrc/: pfdicdat.h
forth/: myforth.fth
main/: CMakeLists.txt  discordant.c  i2c.c  i2c.h  neopixel.c  neopixel.h
